# PalworldSaveTools

./: .gitignore  AGNETS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup_freeze.py  setup_pst.py  start.cmd  start.py
.github/workflows/: release-windows.yml
resources/game_data/: itemdata.json  passivedata.json  structuredata.json
resources/i18n/: config.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json
resources/readme/: README.de_DE.md  README.es_ES.md  README.fr_FR.md  README.ja_JP.md  README.ko_KR.md  README.ru_RU.md  README.zh_CN.md
scripts/: add_translation_keys.py  build.py  build_cx.cmd  build_cx.py  build_nuitka.cmd  build_nuitka.py  clean_code.cmd  clean_code.py  translate_readme.cmd  translate_readme.py  update_translation_keys.py
src/: bootup.py  common.py  convert_players_location_finder.py  import_libs.py  loading_manager.py
src/i18n/: __init__.py
src/palworld_aio/: base_dto.py  base_inventory_manager.py  base_manager.py  constants.py  data_manager.py  dialogs.py  dynamic_item.py  dynamic_item_manager.py  edit_pals.py  func_manager.py  guild_manager.py  inventory_editor.py  inventory_manager.py  main.py  map_generator.py  player_manager.py  save_manager.py  standardized_container.py  updater.py  utils.py  zone_manager.py
src/palworld_base_editor/: __init__.py  base_editor.py  coord_utils.py  transform_updater.py
src/palworld_save_tools/: archive.py  gvas.py  palsav.py
src/palworld_toolsets/: character_transfer.py  convert_level_location_finder.py  convert_levelmeta.py  (+11 more)
(+56 files in other folders)
